--- a/ngBookDemos/ngBookDemos/ngBookDemos.csproj
+++ b/ngBookDemos/ngBookDemos/ngBookDemos.csproj
@@ -61,6 +61,8 @@
     <Content Include="App\5_Expressions\interpolate.js" />
     <Content Include="App\5_Expressions\Parser.html" />
     <Content Include="App\5_Expressions\Parser.js" />
+    <Content Include="App\6_Filters\filters.html" />
+    <Content Include="App\6_Filters\filters.js" />
     <Content Include="protractorTestConf.js" />
     <Content Include="Scripts\sinon-1.8.1.js" />
     <Content Include="Scripts\version.json" />
@@ -353,14 +355,13 @@
     <Content Include="Tests\1.DataBinding\Clock\ClockTests.js" />
     <Content Include="Tests\5_Expressions\interpolate2eTests.js" />
     <Content Include="Tests\5_Expressions\Parsere2eTests.js" />
+    <Content Include="Tests\Filters\Filterse2eTests.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App\6_Filters\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
