--- a/ngBookDemos/ngBookDemos/ngBookDemos.csproj
+++ b/ngBookDemos/ngBookDemos/ngBookDemos.csproj
@@ -64,6 +64,8 @@
     <Content Include="App\6_Filters\formValidation.html" />
     <Content Include="App\6_Filters\filters.html" />
     <Content Include="App\6_Filters\filters.js" />
+    <Content Include="App\7_Directives\Directives.html" />
+    <Content Include="App\7_Directives\myDirective.js" />
     <Content Include="protractorTestConf.js" />
     <Content Include="Scripts\sinon-1.8.1.js" />
     <Content Include="Scripts\version.json" />
