Directives using isolated scope

--- a/ngBookDemos/ngBookDemos/ngBookDemos.csproj
+++ b/ngBookDemos/ngBookDemos/ngBookDemos.csproj
@@ -64,6 +64,8 @@
     <Content Include="App\6_Filters\formValidation.html" />
     <Content Include="App\6_Filters\filters.html" />
     <Content Include="App\6_Filters\filters.js" />
+    <Content Include="App\7_Directives\current-scope-intro.html" />
+    <Content Include="App\7_Directives\current-scope-intro.js" />
     <Content Include="App\7_Directives\Directives.html" />
     <Content Include="App\7_Directives\myDirective.js" />
     <Content Include="protractorTestConf.js" />
