--- a/ngBookDemos/ngBookDemos/ngBookDemos.csproj
+++ b/ngBookDemos/ngBookDemos/ngBookDemos.csproj
@@ -68,6 +68,7 @@
     <Content Include="App\7_Directives\current-scope-intro.js" />
     <Content Include="App\7_Directives\Directives.html" />
     <Content Include="App\7_Directives\myDirective.js" />
+    <Content Include="App\7_Directives\transcludefn.html" />
     <Content Include="protractorTestConf.js" />
     <Content Include="Scripts\sinon-1.8.1.js" />
     <Content Include="Scripts\version.json" />
