--- a/ngBookDemos/ngBookDemos/ngBookDemos.csproj
+++ b/ngBookDemos/ngBookDemos/ngBookDemos.csproj
@@ -71,6 +71,7 @@
     <Content Include="App\7_Directives\LinkFn.html" />
     <Content Include="App\7_Directives\myDirective.js" />
     <Content Include="App\7_Directives\Scope-inheritance.html" />
+    <Content Include="App\7_Directives\timeDurationDirective.html" />
     <Content Include="App\9_Directives explained\directive-with-ampersand.html" />
     <Content Include="App\9_Directives explained\directive-1.html" />
     <Content Include="App\7_Directives\ngModel.html" />
